--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -18,10 +18,6 @@ a {
 	color: #ffffff;
 }
 
-.red {
-	background-color: #c40000;
-}
-
 .turquoise {
 	background-color: #31bebe;
 }
